# fastsave

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  Makefile  NAMESPACE  README  README.md  configure  configure.ac  configure.win
R/: RcppExports.R  compress.R  fastsave-package.R  genser-package.R  save.R
man/: fast-save.Rd  genser-package.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  genser.cpp  interface_lz4.cpp  interface_snappy.cpp  interface_zstd.cpp
